# text-chat-bot

./: .gitignore  Dockerfile  Makefile  README.md  config_template.json  docker-entrypoint.sh  prod.Dockerfile  pyproject.toml
chat-manager/: main.py
chat-manager/bot/: bot.py  crud.py  names.py
chat-manager/util/: config.py  data.py  log.py
text-chat/: main.py
text-chat/bot/: bot.py  lookup.py
text-chat/util/: config.py
